commit on 'main'

--- a/Index.css
+++ b/Index.css
@@ -15,3 +15,7 @@
     flex-direction: column;
     margin-top: 8%;
 }
+#head{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: medium;
+}
